# myutils

./: .gitignore  README.md
archive/: README.md
archive/PCHealth/scripts/: collect-drivers.ps1  collect-events.ps1  collect-integrity.ps1  collect-network.ps1  collect-software.ps1  collect-storage.ps1  collect-system.ps1  collect-temperatures.ps1
archive/PCHealth/scripts/helpers/: common.ps1  formatting.ps1
archive/PCHealth/summaries/templates/: weekly-template.md
archive/dirdiff_old/: README.md  pyproject.toml
archive/exiftool_old/gui_wrapper/: README.md  build.bat
archive/exiftool_old/gui_wrapper/src/clean/: core.cs  ui.cs
archive/exiftool_old/python/src/: clean.py
archive/torui/: measure.py  tor_state.py  ui.py
archive/wallsys_old/src/: nature.cs  tech.cs
batcap/: README.md  build.bat
batcap/src/: program.cs
delcache/: README.md
delcache/src/: delcache.cs
dirdiff/: README.md  build.bat  pyproject.toml
dirdiff/src/dirdiff/: __init__.py  __main__.py
diskwatch/: README.md  build.bat
diskwatch/src/: config.cs  parser.cs  popup.cs  program.cs  remind.cs
etsu/: README.md  clean.ps1  read.ps1
exiftool/: README.md
kdbx-backup/: README.md  build.bat
kdbx-backup/backgroundWatcher/src/: watcher.cs
kdbx-backup/docs/: pushToRemote.md  watch.md
kdbx-backup/pushToRemote/src/: push.cs
kdbx-backup/src/: push.cs  watcher.cs
shared/: README.md  build.bat
shared/src/: catsort.cs  delcache.cs  dirdiff.cs  reindex.cs
wallswitch/: README.md  build.bat
wallswitch/src/: wallswitch.cs
wallsys/: README.md
