[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirdiff"
version = "1.0.0"
description = "Compare two directories by filename, size, and SHA256"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
dirdiff = "dirdiff:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dirdiff*"]
